2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_test): Add isnan, isinf, and isfinite new
	tests.
	* tests/isfinite.input: New file: isfinite new test input.
	* tests/isnan.input: New file: isnan new test input.
	* tests/isinf.input: New file: isinf new test input.
	* tests/test-isfinite.c: Remove.
	* tests/test-isnan.c: Remove.
	* tests/test-isinf.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add llquantexp new tests.
	* tests/llquantexp.input: New file: llquantexp new tests input.
	* tests/test-llquantexp.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add logb new tests.
	* tests/logb.input: New file: logb new tests input.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add samequantum new tests.
	* tests/samequantum.input: New file: samequantum new tests input.
	* tests/test-samequantum.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in ($(libdfp_c_tests)): Add -I$(top_srcdir)/tests.
	($(libdfp_cxx_tests)): Likewise.
	(test-%-d%): New rule: default one to build auto-generated tests.
	(test-%-d32.c): New rule: generate tests for _Decimal32.
	(test-%-d64.c): New rule: generate tests for _Decimal64.
	(test-%-d128.c): New rule: generate tests for _Decimal128.
	* tests/gen-libdfp-tests.py: New file: script to generate tests based
	on input script.
	* tests/test-common.h: New file: common definitions used in
	auto-generated tests.

2013-02-22  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (HUGE_VAL_D32): Define as __builtin_infd32.
	(HUGE_VAL_D64): Define as __builtin_infd64.
	(HUGE_VAL_D128): Define as __builtin_infd128.

2013-02-22  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_files): Add libdfp-version object.
	(SHARED_REALNAME_LIB): Add -Wl,-entry=__libdfp_version.