@@ -1,0 +1,16 @@
+# name issignaling
+# arg1 decimal
+# ret  int
+
+Inf                0
+-Inf               0
+NaN                0
+-NaN               0
+sNaN               1 
+DEC_SUBNORMAL_MIN  0
+DEC_MIN            0
+DEC_MAX            0
+0.0                0
+-0.0               0
+0.1                0
+10E1               0
